sample/k8/base/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: my_namespace
  labels:
    name: my_namespace
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
