sample/k8/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample
  name: sample
  namespace: my_namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sample
    spec:
      containers:
      - image: sample
        name: sample
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          runAsUser: 10001
          runAsGroup: 10001
          fsGroup: 10001
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
