sample/k8/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
  namespace: my_namespace
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: sample
