sample/k8/base/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-my_namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - to: 
        - namespaceSelector: my_namespace
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
    - from:
        - namespaceSelector: {}
